[package]
name = "strawberry_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
fxhash = "0.2.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
wslpath = "0.0.2"